# vault-intelligence

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ColBERT-Bug-Fix-Plan.md  DEVELOPMENT.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_REPORT.md  LICENSE  MOC-TDD.md  README.md  SECURITY.md  SENTENCE-TRANSFORMERS-CONTEXT.md  clustering-result-20250824_153754.md  demo_advanced_search.py  demo_system.py  knowledge_graph.json  learning-review-monthly-20250824.md  pyproject.toml  quick_graph_viz.py  reindex.sh  requirements.txt  tdd-topics.md  test_colbert.py  test_dependencies.py  topic-analysis-workflow.sh  vault-intelligence-주제별-정리-워크플로우.md  vault_analysis_report.md  visualize_knowledge_graph.py
.claude/: settings.local.json
.claude/plans/: 2026-02-11-cli-help-improvement.md  2026-02-13-graph-connect.md  INDEX.md
archive/ai-practice/: ai-practice-files.md  ai-practice-progress.md  ai-practice-todo.md
config/: settings.yaml
docs/: AI-PRACTICE-SUMMARY.md  EXAMPLES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  embedding-upgrade-plan.md  extract-dup-to-config.md  graph-demo.html  multi-document-summarization-prd.md  search-method-comparison.md  todo-embedding-upgrade.md
docs/dev/: embedding-upgrade-plan.md  (+2 more)
plans/: ai-practice-plan.md
private/: DOCUMENTATION_AUDIT_REPORT.md
samples/: README.md
scripts/: security-check.sh
src/: __main__.py  client.py  constants.py  server.py  server_runner.py  vault_assistant.py
tests/: test_client.py  test_graph_renderer.py  test_server.py  test_wikilink_parser.py
(+100 files in other folders)
