[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-intelligence"
version = "2.0.0"
description = "Sentence Transformers 기반 Obsidian Vault 지능형 검색 시스템"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers==2.2.2",
    "torch>=2.0.0",
    "faiss-cpu==1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "FlagEmbedding>=1.2.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
]

[project.scripts]
vault-intel = "src.__main__:main"
vis = "src.__main__:main"  # vault-intelligence system (단축 명령어)

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
